--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -95,9 +95,6 @@
                                 <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
                                 <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
                                 <p>
-                                Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
-                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
-                                <p>
                                     <strong class="d-block text-black">Im Kurspreis inklusive:</strong>
                                     <ul>
                                         <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
@@ -106,7 +103,9 @@
                                         <li style="list-style: disc; display: list-item; margin-left:5px;">Snacks und Zitronenwasser</li>
                                         <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>
                                     </ul>
-                                
+                                <p>
+                                Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                              <p>
                                 <small>
                                    Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
@@ -230,6 +229,7 @@
                             <p class="d-flex">
                                 <span>
                                     Solltest Du am Workshop nicht teilnehmen können, kannst Du deine Workshop-Teilnahme an eine weitere Person übertragen. Lass mir hierzu bitte eine Mail zukommen, wer Dich beim Workshop vertreten wird. Findest Du keine Vertretung oder wird ein Workshop von meiner Seite aus abgesagt, erhältst Du von mir eine Gutschrift, die Du für Workshops oder im Shop einlösen kannst. Bei einer kurzfristigen Absage (2 Tage) ohne Vertretung beträgt die Stornierungsgebühr 50 % des Kurspreises.
+                                    Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
                                 </span>
                             </p>
                             <p>
