text lettering lernen

--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -111,7 +111,7 @@
                         <h3 class="mb-4">Workshops im Stall</h3>
                         <ul class="list-unstyled mb-5">
                             <li class="mb-3">
-                                <strong class="d-block text-black">Inklusive:</strong>
+                                <strong class="d-block text-black">Die letzten zwei Jahre waren von Einschränkungen geprägt. Ich freue mich umso mehr Euch wieder in den Stall einzuladen, um mit euch gemeinsam in verschiedenen Workshop-Programmen kreativ zu werden. Ihr habt Interesse an einer Gruppenveranstaltung wie einem Junggesellinnenabschied oder Geburtstag? Dann schick mir deine individuelle Anfrage.</strong>
                                 <ul>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
                                     <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
