--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -90,6 +90,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
+                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Kreativ-Workshops im Stall</h1>
                                 texttexttext
                                 <p>
                                 texttexttext
