--- a/derstall.html
+++ b/derstall.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="images/Radio_pano1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
                     <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
                 </div>
 
