--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -90,11 +90,11 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Kreativ-Workshops im Stall</h1>
-                                texttexttext
+                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Advent, Advent ..</h1>
+                                Die Vor-Weihnachtszeit möchten meine Freundin Monja und ich mit Euch im Stall einläuten und mit Euch gemeinsam einen Kranz binden.
+                                Mit frischem Grünzeug, Beeren und Tannenzapfen sowie allen weiteren Materialien binden wir in zwei Stunden mit duftenden Waffeln und wärmendem Glühwein und Punsch einen Adventskranz. Ob du den Kranz später an die Haustüre hängst oder mit Kerzen zum Adventskranz verwandelst bleibt im Nachgang dir überlassen.
                                 <p>
-                                texttexttext
-                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
+                                Nach dem Abschicken des Formulars senden wir Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                             </p>
                             </p>
                             <p>
