--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -91,8 +91,8 @@
 
                             <p>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Advent, Advent ..</h1>
-                                Die Vor-Weihnachtszeit möchten meine Freundin Monja und ich mit Euch im Stall einläuten und mit Euch gemeinsam einen Kranz binden.
-                                Mit frischem Grünzeug, Beeren und Tannenzapfen sowie allen weiteren Materialien binden wir in zwei Stunden mit duftenden Waffeln und wärmendem Glühwein und Punsch einen Adventskranz. Ob du den Kranz später an die Haustüre hängst oder mit Kerzen zum Adventskranz verwandelst bleibt im Nachgang dir überlassen.
+                                Die Vor-Weihnachtszeit möchten meine Freundin Monja und ich mit Euch im Stall einläuten.
+                                Mit frischem Grünzeug, Beeren und Tannenzapfen sowie allen notwendigen weiteren Materialien binden wir in zwei Stunden inmitten von duftenden Waffeln und wärmendem Glühwein und Punsch einen Weihnachtskranz. Ob du den Kranz später an die Haustüre hängst oder mit Kerzen zum Adventskranz verwandelst bleibt im Nachgang dir überlassen. Der Preis zur Teilnahme beinhaltet alle Materialien sowie frische Waffeln und warme Getränke. Du brauchst nichts mitbringen.
                                 <p>
                                 Nach dem Abschicken des Formulars senden wir Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                             </p>
