--- a/impressum.html
+++ b/impressum.html
@@ -127,7 +127,7 @@
                         <h3 class="mb-4">Navigation</h3>
                         <ul class="list-unstyled footer-link">
                             <li><a href="index.html">Willkommen</a></li>
-                            <li><a href="letteringlernen.html">Lettering lernen</a></li>
+                            <li><a href="letteringlernen.html">Workshop</a></li>
                             <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                             <li><a href="derstall.html">Der Stall</a></li>
                             <li><a href="impressum.html">Impressum</a></li>
