--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -147,7 +147,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Di, 22.11.2022 19-21 Uhr"> Di, 22.11.2022 19-21 Uhr</option>
+                                    <option value="Mi, 23.11.2022 19-21 Uhr"> Mi, 23.11.2022 19-21 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
                                     
                                     
