--- a/anfrage.html
+++ b/anfrage.html
@@ -91,10 +91,23 @@
                             <p class="d-flex">
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <span>
-                                    Für Auftragsarbeit, ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinnenabschied kannst Du dich bei mir melden.
-                                    Ich bin mir sicher, wir stellen ein tolles Kreativprogramm zusammen und/oder finden einen passenden Termin.
-                                    Die Mindestteilnehmerzahl für einen privaten Lettering-Workshop liegt bei 9 Personen.
+                                    Für individuelle Workshops für einen Geburtstag, Junggesellinnenabschied oder einfach nur mit deinen besten Freunden kannst Du dich über das folgende Formular bei mir melden.
+                                    Ich bin mir sicher, wir stellen ein tolles Kreativprogramm zusammen und finden einen passenden Termin.
+                                    Die Mindestteilnehmerzahl für einen privaten Lettering-Workshop liegt bei 8 Personen und die Teilnahmegebühr beträgt € 60.
                                 </span>
+
+                                <p>
+                                    <strong class="d-block text-black">Im Kurspreis inklusive:</strong>
+                                    <ul>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Zusäztlich: Vier statt drei Stunden gemeinsame Zeit im Stall, perfekt, um ein mitgebrachtes Frühstück oder andere Snacks unterzubekommen</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Zusätzlich: Ein Glas Sekt zum Anstoßen</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Mineralwasser</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>
+                                    </ul>
+                                <p>
                             </p>
                         </div>
                         <!--<div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
@@ -187,7 +200,7 @@
                     <h3 class="mb-4">Navigation</h3>
                     <ul class="list-unstyled footer-link">
                         <li><a href="index.html">Willkommen</a></li>
-                        <li><a href="letteringlernen.html">Lettering lernen</a></li>
+                        <li><a href="letteringlernen.html">Workshop</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
                         <li><a href="impressum.html">Impressum</a></li>
