--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -147,7 +147,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
+                                    <option value="Leider sind keine freien Plätze mehr verfügbar."> Leider sind keine freien Plätze mehr verfügbar.</option>
                                     
                                     
 
