font fixes and url changes

--- a/derstall.html
+++ b/derstall.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="letteringlernen.html">Workshop</a>
+                            <a class="nav-link" href="workshops.html">Workshop</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="anfrage.html">Deine individuelle Anfrage</a>
@@ -102,14 +102,14 @@
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <!--<a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>-->
                     <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
                 </div>
 
             </div>
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>                    
+                    <!--<a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>-->                    
                     <a href="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" alt="Image" class="img-fluid"></a>                    
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
@@ -137,7 +137,7 @@
 
                     <p class="mb-5"><a href="https://www.google.de/maps/place/Wohnmobil-+und+Wohnwagenstellplatz/@49.4755018,9.8325218,17z/data=!3m1!4b1!4m5!3m4!1s0x4798707fbba92deb:0x354358b8789e2ec8!8m2!3d49.4754983!4d9.8347105" target="_blank">Parkmöglichkeiten</a> gibt es direkt nach dem Überqueren der Tauberbrücke. Auf der linken Seite ist ein großer öffentlicher Parkplatz der ehemaligen Feuerwehr.</p>
 
-                    <p><a href="letteringlernen.html" class="btn btn-outline-black">Workshops</a></p>
+                    <p><a href="workshops.html" class="btn btn-outline-black">Workshops</a></p>
                 </div>
                 <div class="col-lg-6 order-1">
                     <figure class="img-dotted-bg">
@@ -185,7 +185,7 @@
                     <h3 class="mb-4">Navigation</h3>
                     <ul class="list-unstyled footer-link">
                         <li><a href="index.html">Willkommen</a></li>
-                        <li><a href="letteringlernen.html">Workshop</a></li>
+                        <li><a href="workshops.html">Workshop</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
                         <li><a href="impressum.html">Impressum</a></li>
