--- a/anfrage.html
+++ b/anfrage.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="letteringlernen.html">Workshop</a>
+                            <a class="nav-link" href="workshops.html">Workshop</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active" href="anfrage.html">Deine individuelle Anfrage</a>
@@ -200,7 +200,7 @@
                     <h3 class="mb-4">Navigation</h3>
                     <ul class="list-unstyled footer-link">
                         <li><a href="index.html">Willkommen</a></li>
-                        <li><a href="letteringlernen.html">Workshop</a></li>
+                        <li><a href="workshops.html">Workshop</a></li>
                         <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                         <li><a href="derstall.html">Der Stall</a></li>
                         <li><a href="impressum.html">Impressum</a></li>
