--- a/datenschutz.html
+++ b/datenschutz.html
@@ -50,7 +50,7 @@
                             <a class="nav-link active" href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="letteringlernen.html">Lettering lernen</a>
+                            <a class="nav-link" href="workshops.html">Lettering lernen</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="anfrage.html">Deine individuelle Anfrage</a>
@@ -286,7 +286,7 @@
                         <h3 class="mb-4">Navigation</h3>
                         <ul class="list-unstyled footer-link">
                             <li><a href="index.html">Willkommen</a></li>
-                            <li><a href="letteringlernen.html">Lettering lernen</a></li>
+                            <li><a href="workshops.html">Lettering lernen</a></li>
                             <li><a href="anfrage.html">Deine individuelle Anfrage</a></li>
                             <li><a href="derstall.html">Der Stall</a></li>
                             <li><a href="impressum.html">Impressum</a></li>
