--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -165,7 +165,7 @@
                                     <option value="Fortgeschritten: Sa, 12.11.2022 14-17 Uhr">Fortgeschritten: Sa, 12.11.2022 14-17 Uhr</option>
                                     <!--option value="Anfänger: So, 13.11.2022 13-16 Uhr">Anfänger: So, 13.11.2022 13-16 Uhr</option>-->
                                     <option value="Anfänger: Fr, 16.12.2022 18-21 Uhr">Anfänger: Fr, 16.12.2022 18-21 Uhr</option>
-                                    <!--option value="Anfänger: So, 18.12.2022 13-16 Uhr">Anfänger: So, 18.12.2022 13-16 Uhr</option>-->
+                                    <option value="Anfänger: So, 18.12.2022 13-16 Uhr">Anfänger: So, 18.12.2022 13-16 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
