--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -163,7 +163,8 @@
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <!--option value="Fortgeschritten: Sa, 12.11.2022 14-17 Uhr">Fortgeschritten: Sa, 12.11.2022 14-17 Uhr</option>-->
-                                    <option value="Anfänger: So, 18.12.2022 13-16 Uhr">Anfänger: So, 18.12.2022 13-16 Uhr</option>
+                                    <option value="Anfänger: So, 26.03.23 13-16 Uhr 58 €">Anfänger: So, 26.03.23 13-16 Uhr 58 €</option>
+                                    <option value="Fortgeschritten: So, 23.04.23 13-16 Uhr 63 €">Fortgeschritten: So, 23.04.23 13-16 Uhr 63 €</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
