--- a/workshops.html
+++ b/workshops.html
@@ -101,7 +101,7 @@
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Kranz binden</h2>
-                            <p>35 € Kursgebühr</p>
+                            <p>aktuell nicht verfügbar</p>
                         </div>
                         <img src="images/Workshop_KranzBinden.jpg" alt="Image" class="img-fluid">
                     </a>
