--- a/workshops.html
+++ b/workshops.html
@@ -100,10 +100,10 @@
 
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Kranz binden</h2>
-                            <p>aktuell nicht verfügbar</p>
+                            <h2>Fortgeschrittenen-Workshop im Weingut Maier</h2>
+                            <p>Schwaikheim am 19.03.2023</p>
                         </div>
-                        <img src="images/Workshop_KranzBinden.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Workshop_Weingut.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
