--- a/special.html
+++ b/special.html
@@ -68,11 +68,11 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Header_Kranzbinden.jpg');">
+         style="        background-image: url('images/Header_maier.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Kranz binden</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering auf dem Weingut</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Melde dich an</a></p>
                 </div>
             </div>
