neuer text special

--- a/special.html
+++ b/special.html
@@ -90,12 +90,12 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Advent, Advent ..</h1>
+                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering auf dem Weingut</h1>
                                 <p>
                                 Die Vor-Weihnachtszeit möchten meine Freundin Monja und ich mit Euch im Stall einläuten.
                                 Mit frischem Grünzeug, Beeren und Tannenzapfen sowie allen notwendigen weiteren Materialien binden wir in zwei Stunden inmitten von duftenden Waffeln und wärmendem Glühwein und Punsch einen Weihnachtskranz. Ob du den Kranz später an die Haustüre hängst oder mit Kerzen zum Adventskranz verwandelst bleibt im Nachgang dir überlassen. Der Preis zur Teilnahme beinhaltet alle Materialien sowie frische Waffeln und warme Getränke. Du brauchst nichts mitbringen.
                                 <p>
-                                Nach dem Abschicken des Formulars senden wir Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                                 </p> 
                             </p>
                             </p>
@@ -147,7 +147,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Leider sind keine freien Plätze mehr verfügbar."> Leider sind keine freien Plätze mehr verfügbar.</option>
+                                    <option value="So, 19.03.2023 11-14 Uhr">So, 19.03.2023 11-14 Uhr</option>
                                     
                                     
 
