--- a/special.html
+++ b/special.html
@@ -92,9 +92,20 @@
                             <p>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering auf dem Weingut</h1>
                                 <p>
-                                Die Vor-Weihnachtszeit möchten meine Freundin Monja und ich mit Euch im Stall einläuten.
-                                Mit frischem Grünzeug, Beeren und Tannenzapfen sowie allen notwendigen weiteren Materialien binden wir in zwei Stunden inmitten von duftenden Waffeln und wärmendem Glühwein und Punsch einen Weihnachtskranz. Ob du den Kranz später an die Haustüre hängst oder mit Kerzen zum Adventskranz verwandelst bleibt im Nachgang dir überlassen. Der Preis zur Teilnahme beinhaltet alle Materialien sowie frische Waffeln und warme Getränke. Du brauchst nichts mitbringen.
-                                <p>
+                                    <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
+                                    <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
+                                    <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
+                                    <p>
+                                        <strong class="d-block text-black">Im Kurspreis von 78 € inklusive:</strong>
+                                        <ul>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Glas Sekt, Wasser, Saft und Gebäck</li>
+                                        </ul>
+                                    <p>
+                                    <p>
+                                </p>
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                                 </p> 
                             </p>
