--- a/special.html
+++ b/special.html
@@ -109,6 +109,7 @@
                                     <p>
                                 </p>
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
+                                Weingut Maier | Zehnmorgenweg 2 | 71409 Schwaikheim
                                 </p> 
                             </p>
                             </p>
