--- a/workshops.html
+++ b/workshops.html
@@ -103,7 +103,7 @@
                             <h2>Fortgeschrittenen-Workshop im Weingut Maier</h2>
                             <p>Schwaikheim am 19.03.2023</p>
                         </div>
-                        <img src="images/Workshop_Weingut.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Header_maier.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
