--- a/special.html
+++ b/special.html
@@ -68,7 +68,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/Header_maier.jpg');">
+         style="background-image: url('images/Workshop_Weingut.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
