--- a/impressum.html
+++ b/impressum.html
@@ -89,7 +89,7 @@
                 Lettering im Stall<br />An der Tauber 14<br />97990 Elpersheim
             </p>
             <p>
-                Telefon: 01604054800<br />
+                Telefon: auf Anfrage<br />
                 E-Mail: <a href="mailto:letteringimstall@gmail.com">letteringimstall@gmail.com</a><br />
             </p>
             <br /><br /><h2>Disclaimer – rechtliche Hinweise</h2>
