--- a/special.html
+++ b/special.html
@@ -161,7 +161,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="So, 19.03.2023 11-14:30 Uhr">So, 19.03.2023 11-14:30 Uhr</option>
+                                    <option value="Aktuell sind keine Termine geplant">Aktuell sind keine Termine geplant</option>
                                     
                                     
 
