--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -163,8 +163,8 @@
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <!--option value="Fortgeschritten: Sa, 12.11.2022 14-17 Uhr">Fortgeschritten: Sa, 12.11.2022 14-17 Uhr</option>-->
-                                    <option value="Anfänger: So, 05.03.23 13-16 Uhr 58 €">Anfänger: So, 05.03.23 13-16 Uhr 58 €</option>
                                     <option value="Fortgeschritten: Sa, 18.03.23 11-14 Uhr 63 €">Fortgeschritten: Sa, 18.03.23 11-14 Uhr 63 €</option>
+                                    <option value="Anfänger: Fr, 24.03.23 18-21 Uhr 58 €">Anfänger: Fr, 24.03.23 18-21 Uhr 58 €</option>
                                     <option value="Anfänger: So, 26.03.23 13-16 Uhr 58 €">Anfänger: So, 26.03.23 13-16 Uhr 58 €</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
