--- a/workshops.html
+++ b/workshops.html
@@ -101,7 +101,7 @@
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Fortgeschrittenen-Workshop im Weingut Maier</h2>
-                            <p>Schwaikheim am 19.03.2023</p>
+                            <p>Schwaikheim</p>
                         </div>
                         <img src="images/Header_maier.jpg" alt="Image" class="img-fluid">
                     </a>
