--- a/fussmatte.html
+++ b/fussmatte.html
@@ -61,7 +61,9 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                             
                             <p>
-                                Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause.
+                               INFO: Bestellungen können erst wieder ab dem 20. April bearbeitet werden.
+                               
+                               Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause.
                                 Bei der Beschriftung handelt es sich um 100 % Handarbeit.
                                 Die Fußmatte sollte vorzugsweise im Innenraum wie der Wohnungstür oder im Hausflur ihren Platz finden.
                             </p>
