--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -60,6 +60,8 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
+                                INFO: Bestellungen können erst wieder ab dem 20. April bearbeitet werden.
+                                
                                 Hier kannst du ganz einfach deinen Gutschein für einen Lettering Kurs bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 Wenn du den Gutschein per Post erhalten möchtest, denk bitte daran, deine Postanschrift ins Nachrichtenfeld zu schreiben.
                             </p>
