--- a/blumenkranz.html
+++ b/blumenkranz.html
@@ -67,6 +67,7 @@
 
 
                             <p>
+                                INFO: Bestellungen können erst wieder ab dem 20. April bearbeitet werden.
                                 Bei den Trockenblumenkränzen handelt es sich durch die handwerkliche Verarbeiteung von haltbaren und trockenen Naturmaterialien um Unikate. Saisonbedingt sind nicht immer alle Materialien verfügbar, weshalb nicht gewährleistet werden kann, dass immer alle Blumen zur Verfügung stehen.
                                 Beispiele der Blumenkranz-Arten findest du <a href="#Beispiel">hier</a> unterhalb des Formulars.
                             
