--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -166,7 +166,7 @@
                                     <option value="Anfänger: Do, 22.06.2023 18-21 Uhr">Anfänger: Do, 22.06.2023 18-21 Uhr</option>
                                     <option value="Fortgeschrittene: Fr, 30.06.2023 16-19 Uhr">Fortgeschrittene: Fr, 30.06.2023 16-19 Uhr</option>
                                     <option value="Anfänger: So, 02.07.2023 10-13 Uhr">Anfänger: So, 02.07.2023 10-13 Uhr</option>
-                                    <option value="Anfänger: Fr, 28.07.2023 16-19 Uhr">Anfänger: Fr, 28.07.2023 16-19 Uhr</option>
+                                    <!--option value="Anfänger: Fr, 28.07.2023 16-19 Uhr">Anfänger: Fr, 28.07.2023 16-19 Uhr</option>-->
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
