--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -162,10 +162,11 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Anfänger: Do, 22.06.2023 18-21 Uhr">Anfänger: Do, 22.06.2023 18-21 Uhr</option>
-                                    <option value="Fortgeschrittene: Fr, 30.06.2023 16-19 Uhr">Fortgeschrittene: Fr, 30.06.2023 16-19 Uhr</option>
-                                    <option value="Anfänger: So, 02.07.2023 10-13 Uhr">Anfänger: So, 02.07.2023 10-13 Uhr</option>
-                                    <!--option value="Anfänger: Fr, 28.07.2023 16-19 Uhr">Anfänger: Fr, 28.07.2023 16-19 Uhr</option>-->
+                                    <option value="A 09.09.2023">Anfänger: Sa, 09.09.2023 13-16 Uhr (58 €)</option>
+                                    <option value="A 03.10.2023">Anfänger: Di, 03.10.2023 13-16 Uhr (58 €)</option>
+                                    <option value="F 07.10.2023">Fortgeschritten: Sa, 07.10.2023 11-14 Uhr (63 €)</option>
+                                    <option value="A 21.10.2023">Anfänger: Sa, 21.10.2023 11-14 Uhr</option>
+                                    <option value="A 25.11.2023">Anfänger: Sa, 25.11.2023 14-17 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
