--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -165,8 +165,8 @@
                                     <option value="A 09.09.2023">Anfänger: Sa, 09.09.2023 13-16 Uhr (58 €)</option>
                                     <option value="A 03.10.2023">Anfänger: Di, 03.10.2023 13-16 Uhr (58 €)</option>
                                     <option value="F 07.10.2023">Fortgeschritten: Sa, 07.10.2023 11-14 Uhr (63 €)</option>
-                                    <option value="A 21.10.2023">Anfänger: Sa, 21.10.2023 11-14 Uhr</option>
-                                    <option value="A 25.11.2023">Anfänger: Sa, 25.11.2023 14-17 Uhr</option>
+                                    <option value="A 21.10.2023">Anfänger: Sa, 21.10.2023 11-14 Uhr (58 €)</option>
+                                    <option value="A 25.11.2023">Anfänger: Sa, 25.11.2023 14-17 Uhr (58 €)</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
