--- a/workshops.html
+++ b/workshops.html
@@ -100,7 +100,7 @@
 
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Fortgeschrittenen-Workshop im Weingut Maier</h2>
+                            <h2>Lettering-Workshop im Weingut Maier</h2>
                             <p>Schwaikheim</p>
                         </div>
                         <img src="images/Header_maier.jpg" alt="Image" class="img-fluid">
