--- a/special.html
+++ b/special.html
@@ -160,7 +160,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Sa, 17.09.2023 14 - 17 Uhr">Anfänger: Sa, 17.09.2023 14 - 17 Uhr (75 €)</option>
+                                    <option value="Sa, 17.09.2023 14 - 17 Uhr">Anfänger: So, 17.09.2023 14 - 17 Uhr (75 €)</option>
                                     
                                     
 
