--- a/workshops.html
+++ b/workshops.html
@@ -100,10 +100,10 @@
 
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Lettering-Workshop im Weingut Maier</h2>
-                            <p>Schwaikheim</p>
+                            <h2>Winterliche Kränze binden</h2>
+                            <p>Adventsstübchen</p>
                         </div>
-                        <img src="images/Header_maier.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Kranzbinden_3.JPG" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
