--- a/special.html
+++ b/special.html
@@ -68,11 +68,11 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/Workshop_Weingut.jpg');">
+         style="background-image: url('images/Kranzbinden_1.JPG');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering auf dem Weingut</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Winterliche Kränze binden</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Melde dich an</a></p>
                 </div>
             </div>
@@ -90,25 +90,24 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering auf dem Weingut</h1>
+                                <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Advent, Advent ..</h1>
                                 <p>
-                                    <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
-                                    <p>Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.
+                                    <p>In diesem Workshop zaubern wir gemeinsam Winterkränze aus Grünzeug, was regional in unserer Heimat zu finden ist.</p>
+                                    <p>Dekorieren könnt ihr Euren Kranz im Nachgang mit Kugeln, Zapfen, Sternen und vielem mehr.
                                         
-                                        Der Kurs dauert circa 3 bis 3,5 Stunden.</p>
+                                        Der Kurs dauert circa 2 Stunden. Im Anschluss seid ihr im heimeligen Weihnachtsmarkt noch zu frisch gebackenen Waffeln, winterlichem Punsch oder Glühwein eingeladen.</p>
                                     <p>
-                                        <strong class="d-block text-black">Im Kurspreis von 75 € inklusive:</strong>
+                                        <strong class="d-block text-black">Im Kurspreis von 45 € inklusive:</strong>
                                         <ul>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Verpflegung vom Weingut Maier: Ein Glas Sekt, Wasser, Saft und Gebäck</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Grünzeug, was kurzfristig geschnitten wurde und somit bis Weihnachten und darüber hinaus Freude bereitet</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Deko-Elemente, Schnüre und Band sowie Werkzeug wie Draht- und Gartenschere sowie Römer (Unterkranz)</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Verpflegung im Weihnachtsmarkt mit frischen Waffeln und warmen Getränken an der Feuertonne</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Unterstützung von uns zwei Veranstalterinnen: Monja und Lena</li>
                                         </ul>
                                     <p>
                                     <p>
                                 </p>
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
-                                Weingut Maier | Zehnmorgenweg 2 | 71409 Schwaikheim
                                 </p> 
                             </p>
                             </p>
