--- a/special.html
+++ b/special.html
@@ -92,14 +92,14 @@
                             <p>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Advent, Advent ..</h1>
                                 <p>
-                                    <p>In diesem Workshop zaubern wir gemeinsam Winterkränze aus Grünzeug, was regional in unserer Heimat zu finden ist.</p>
-                                    <p>Dekorieren könnt ihr Euren Kranz im Nachgang mit Kugeln, Zapfen, Sternen und vielem mehr.
+                                    <p>In diesem Workshop zaubern wir gemeinsam Winterkränze aus Grünzeug, welches regional in unserer Heimat zu finden ist.</p>
+                                    <p>Dekorieren kannst Du deinen Kranz im Nachgang mit Kugeln, Zapfen, Sternen und vielem mehr. Möchtest du aus deinem gebundenen Kranz einen Adventskranz machen, kannst Du deine Kerzen und Kerzenhalter gerne selbst mitbringen. 
                                         
                                         Der Kurs dauert circa 2 Stunden. Im Anschluss seid ihr im heimeligen Weihnachtsmarkt noch zu frisch gebackenen Waffeln, winterlichem Punsch oder Glühwein eingeladen.</p>
                                     <p>
                                         <strong class="d-block text-black">Im Kurspreis von 45 € inklusive:</strong>
                                         <ul>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Grünzeug, was kurzfristig geschnitten wurde und somit bis Weihnachten und darüber hinaus Freude bereitet</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Frisches Grünzeug, welches maximal bis zu 5 Tage im Voraus geschnitten und kühl gelagert wurde und somit bis Weihnachten und darüber hinaus Freude bereitet</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Deko-Elemente, Schnüre und Band sowie Werkzeug wie Draht- und Gartenschere sowie Römer (Unterkranz)</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Verpflegung im Weihnachtsmarkt mit frischen Waffeln und warmen Getränken an der Feuertonne</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Unterstützung von uns zwei Veranstalterinnen: Monja und Lena</li>
