--- a/special.html
+++ b/special.html
@@ -99,8 +99,8 @@
                                     <p>
                                         <strong class="d-block text-black">Im Kurspreis von 45 € inklusive:</strong>
                                         <ul>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Frisches Grünzeug, welches maximal bis zu 5 Tage im Voraus geschnitten und kühl gelagert wurde und somit bis Weihnachten und darüber hinaus Freude bereitet</li>
-                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Deko-Elemente, Schnüre und Band sowie Werkzeug wie Draht- und Gartenschere sowie Römer (Unterkranz)</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Frisches Grünzeug, welches wir erst kurzfristig vor dem ersten Workshop schneiden und kühl lagern</li>
+                                            <li style="list-style: disc; display: list-item; margin-left:5px;">Deko-Elemente, Schnüre und Band sowie Werkzeug wie Draht- und Gartenschere und einen self-made Römer (Unterkranz)</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Verpflegung im Weihnachtsmarkt mit frischen Waffeln und warmen Getränken an der Feuertonne</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Unterstützung von uns zwei Veranstalterinnen: Monja und Lena</li>
                                         </ul>
